resize fix, gap fix, product tooltips added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -33,7 +33,7 @@ header {
 	position: sticky;
 	top: 0;
 	z-index: 1;
-	height: 4em;
+	height: 4vw;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	background-color: rgba(230, 209, 165, 0.90);
@@ -43,12 +43,12 @@ header {
 /* Header: Логотип */
 
 .header__button {
-	margin: auto auto auto 3em;
+	margin: auto 3vw;
 }
 
 .header__button img {
 	transition: all .35s;
-	width: 15em;
+	width: 15vw;
 	float: left;
 }
 
@@ -60,9 +60,9 @@ header {
 /* Header: Ссылки */
 
 .header__action-buttons {
-	margin: auto 3em auto 0;
+	margin: auto 3vw;
 	font-family: Pollywog;
-	font-size: 1.20em;
+	font-size: clamp(0.25em, 1.5vw, 1.2em);
 }
 
 .header__action-buttons a {
@@ -84,7 +84,7 @@ header {
 main {
 	position: relative;
 	z-index: 0;
-	margin-top: -4em;
+	margin-top: -4vw;
 	height: 100%;
 }
 
@@ -209,8 +209,8 @@ main {
 	box-shadow: 0px 0.8em 2em rgba(0, 0, 0, 1);
 	mix-blend-mode: hard-light;
 	background-color: rgba(255, 255, 255, 0.70);
-	border-radius: 3em;
-	padding: 4em;
+	border-radius: 4vw;
+	padding: 4vw;
 }
 
 .main__second-window-titles {
@@ -245,14 +245,14 @@ main {
 .main__third-window {
 	background-image: url(../pictures/bg/background_products.jpg);
 	background-size: cover;
-	padding: 3em 0;
+	padding: 3vw 0;
 	font-family: FuturaRound;
 	color: rgb(40, 30, 20);
 }
 
 .main__third-window-titles {
 	display: grid;
-	font-size: clamp(1.5em, 2vw, 3em);
+	font-size: clamp(0.25em, 2vw, 3em);
 	justify-content: center;
 	color: rgba(124, 70, 34, 0.95);
 }
@@ -272,22 +272,45 @@ main {
 	grid-template-columns: repeat(4	, 1fr);
 	text-align: center;
 	width: 65%;
-	row-gap: 4%;
 	margin: auto;
 }
 
 .main__third-window-product {
+	position: relative;
+	z-index: 0;
 	width: 90%;
+	margin: 4%auto;
 	padding: 5%;
 	background-color: white;
 	border-radius: 10%;
 	font-size: clamp(0.25em, 1.5vw, 1.25em);
-	box-shadow: 0px 0.8em 1em rgba(0, 0, 0, 1);
-	transition: all .35s;
+	box-shadow: 0px 0.8em 1em rgba(0, 0, 0, 0.25);
+	transition: all .35s, z-index 0s;
 }
 
 .main__third-window-product:hover {
+	z-index: 1;
 	transform: scale(1.1);
+	box-shadow: 0px 1em 1.5em rgba(0, 0, 0, 0.75);
+}
+
+.main__third-window-product-info {
+	position: absolute;
+	background-color: rgba(255, 250, 235, 0.75);
+	width: 20vw;
+	padding: 1vw;
+	border-radius: 1vw;
+	top: 10%;
+	left: -20%;
+	opacity: 0;
+	font-size: clamp(0.25em, 1vw, 1.25em);
+	transition: all 0.35s;
+}
+
+.main__third-window-product:hover .main__third-window-product-info {
+	opacity: 100;
+	left: 40%;
+	pointer-events: auto;
 }
 
 .main__third-window-product img {
